--- a/Matrix.ipynb
+++ b/Matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,33 +91,32 @@
     "    # TODO\n",
     "    def inverse(self) -> object:\n",
     "        if self.shape[0] != self.shape[1] and self.shape[0] < 2:\n",
-    "            raise Exception('Matrix is not invertible as it is a non-square matrix. Please provide a square matrix with dimensions greater than or equal to (2, 2).')\n",
+    "            raise Exception('Matrix is not invertible as it is a non-square matrix. Please provide a square matrix.')\n",
     "        matrix = [[1], [0]]\n",
     "        return Matrix(matrix)\n",
     "\n",
     "    def determinant(self) -> float:\n",
-    "        if self.shape[0] != self.shape[1] and self.shape[0] < 2:\n",
-    "            raise Exception('Matrix determinant cannot be derived as it is a non-square matrix. Please provide a square matrix with dimensions greater than or equal to (2, 2).')\n",
+    "        if self.shape[0] != self.shape[1]:\n",
+    "            raise Exception('Matrix determinant cannot be derived as it is a non-square matrix. Please provide a square matrix.')\n",
     "\n",
-    "        matrix, data = self.data, self.data\n",
+    "        matrix, det = self.data, 0\n",
     "        indices = list(range(len(matrix)))\n",
-    "        det = 0\n",
+    "\n",
+    "        if len(matrix) == 1 and len(matrix[0]) == 1:\n",
+    "            return matrix[0][0]\n",
     "\n",
     "        if len(matrix) == 2 and len(matrix[0]) == 2:\n",
-    "            det = matrix[0][0] * matrix[1][1] - matrix[1][0] * matrix[0][1]\n",
-    "            return det\n",
-    "        \n",
-    "        for focus_column in indices:\n",
-    "            #matrix.remove(matrix[0])\n",
-    "            rows = len(matrix)\n",
-    "            for i in range(1, rows):\n",
-    "                principal_minor = matrix[i][0:focus_column]\n",
-    "                principal_minor.extend(matrix[i][focus_column+1:])\n",
-    "                matrix[i] = principal_minor\n",
-    "            print(matrix[1:])\n",
+    "            return matrix[0][0] * matrix[1][1] - matrix[1][0] * matrix[0][1]\n",
     "\n",
-    "        sub_matrix = Matrix(matrix[1:])\n",
-    "        sub_det = sub_matrix.determinant()\n",
+    "        for focus_column in indices:\n",
+    "            principal_minor = matrix[1:]\n",
+    "            rows = len(principal_minor)\n",
+    "            for i in range(rows):\n",
+    "                principal_minor[i] = principal_minor[i][0:focus_column] + principal_minor[i][focus_column+1:]\n",
+    "\n",
+    "        print(principal_minor)\n",
+    "\n",
+    "        sub_det = Matrix(principal_minor).determinant()\n",
     "        det += (-1)**(focus_column % 2) * matrix[0][focus_column] * sub_det\n",
     "\n",
     "        return det\n",
@@ -217,68 +216,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def determinant_recursive(A, total=0):\n",
-    "    # Section 1: store indices in list for row referencing\n",
-    "    indices = list(range(len(A)))\n",
-    "     \n",
-    "    # Section 2: when at 2x2 submatrices recursive calls end\n",
-    "    if len(A) == 2 and len(A[0]) == 2:\n",
-    "        val = A[0][0] * A[1][1] - A[1][0] * A[0][1]\n",
-    "        return val\n",
-    " \n",
-    "    # Section 3: define submatrix for focus column and \n",
-    "    #      call this function\n",
-    "    for fc in indices: # A) for each focus column, ...\n",
-    "        # find the submatrix ...\n",
-    "        As = copy_matrix(A) # B) make a copy, and ...\n",
-    "        As = As[1:] # ... C) remove the first row\n",
-    "        height = len(As) # D) \n",
-    " \n",
-    "        for i in range(height): \n",
-    "            # E) for each remaining row of submatrix ...\n",
-    "            #     remove the focus column elements\n",
-    "            As[i] = As[i][0:fc] + As[i][fc+1:] \n",
-    " \n",
-    "        sign = (-1) ** (fc % 2) # F) \n",
-    "        # G) pass submatrix recursively\n",
-    "        sub_det = determinant_recursive(As)\n",
-    "        # H) total all returns from recursion\n",
-    "        total += sign * A[0][fc] * sub_det \n",
-    " \n",
-    "    return total"
+    "A = Matrix([[1, 0], [0, 1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = Matrix([[1, 0, 0, 0], [0, 2, 2, 0], [0, 0, 3, 0], [0, 0, 0, 4]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<class: 'Matrix'>\n",
-       "Dimensions: 4 row(s) x 4 column(s)\n",
-       " [[1, 0, 0, 0],\n",
-       "  [0, 2, 2, 0],\n",
-       "  [0, 0, 3, 0],\n",
-       "  [0, 0, 0, 4]]\n",
-       "Size: 16"
+       "Dimensions: 3 row(s) x 3 column(s)\n",
+       " [[5, 5, 0],\n",
+       "  [5, 5, 0],\n",
+       "  [0, 0, 1]]\n",
+       "Size: 9"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +250,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.determinant()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = Matrix([[1, 0, 0], [0, 1, 0], [0, 0, 1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5, 5], [0, 0]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.determinant()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -837,14 +854,14 @@
       "text/plain": [
        "<class: 'Matrix'>\n",
        "Dimensions: 4 row(s) x 4 column(s)\n",
-       " [[1, 0, 0, 0],\n",
-       "  [0, 2, 2, 0],\n",
+       " [[5, 5, 0, 0],\n",
+       "  [5, 5, 2, 0],\n",
        "  [0, 0, 3, 0],\n",
        "  [0, 0, 0, 4]]\n",
        "Size: 16"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -880,11 +897,11 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [45]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mA\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdeterminant\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[0;32mIn [37]\u001b[0m, in \u001b[0;36mMatrix.determinant\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[38;5;28mprint\u001b[39m(matrix[\u001b[38;5;241m1\u001b[39m:])\n\u001b[1;32m    111\u001b[0m sub_matrix \u001b[38;5;241m=\u001b[39m Matrix(matrix[\u001b[38;5;241m1\u001b[39m:])\n\u001b[0;32m--> 112\u001b[0m sub_det \u001b[38;5;241m=\u001b[39m \u001b[43msub_matrix\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdeterminant\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    113\u001b[0m det \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m(focus_column \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m*\u001b[39m matrix[\u001b[38;5;241m0\u001b[39m][focus_column] \u001b[38;5;241m*\u001b[39m sub_det\n\u001b[1;32m    115\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m det\n",
-      "Input \u001b[0;32mIn [37]\u001b[0m, in \u001b[0;36mMatrix.determinant\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[38;5;28mprint\u001b[39m(matrix[\u001b[38;5;241m1\u001b[39m:])\n\u001b[1;32m    111\u001b[0m sub_matrix \u001b[38;5;241m=\u001b[39m Matrix(matrix[\u001b[38;5;241m1\u001b[39m:])\n\u001b[0;32m--> 112\u001b[0m sub_det \u001b[38;5;241m=\u001b[39m \u001b[43msub_matrix\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdeterminant\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    113\u001b[0m det \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m(focus_column \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m*\u001b[39m matrix[\u001b[38;5;241m0\u001b[39m][focus_column] \u001b[38;5;241m*\u001b[39m sub_det\n\u001b[1;32m    115\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m det\n",
-      "Input \u001b[0;32mIn [37]\u001b[0m, in \u001b[0;36mMatrix.determinant\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    108\u001b[0m         matrix[i] \u001b[38;5;241m=\u001b[39m principal_minor\n\u001b[1;32m    109\u001b[0m     \u001b[38;5;28mprint\u001b[39m(matrix[\u001b[38;5;241m1\u001b[39m:])\n\u001b[0;32m--> 111\u001b[0m sub_matrix \u001b[38;5;241m=\u001b[39m \u001b[43mMatrix\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmatrix\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    112\u001b[0m sub_det \u001b[38;5;241m=\u001b[39m sub_matrix\u001b[38;5;241m.\u001b[39mdeterminant()\n\u001b[1;32m    113\u001b[0m det \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m(focus_column \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m*\u001b[39m matrix[\u001b[38;5;241m0\u001b[39m][focus_column] \u001b[38;5;241m*\u001b[39m sub_det\n",
-      "Input \u001b[0;32mIn [37]\u001b[0m, in \u001b[0;36mMatrix.__init__\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, data):\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcheck_integrity(data) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m:\n\u001b[0;32m----> 7\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMatrix is incorrectly configured with empty matrix or row, column, or data type mismatch. Please provide a list of lists containing only ints or floats of consistent dimensions.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m data\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrows \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(data)\n",
+      "\u001b[0;32m<ipython-input-34-57ed2641817a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mA\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeterminant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-32-cad16e5608a1>\u001b[0m in \u001b[0;36mdeterminant\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    111\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m         \u001b[0msub_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprincipal_minor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 113\u001b[0;31m         \u001b[0msub_det\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msub_matrix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeterminant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    114\u001b[0m         \u001b[0mdet\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfocus_column\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mmatrix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfocus_column\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0msub_det\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-32-cad16e5608a1>\u001b[0m in \u001b[0;36mdeterminant\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    111\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m         \u001b[0msub_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprincipal_minor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 113\u001b[0;31m         \u001b[0msub_det\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msub_matrix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeterminant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    114\u001b[0m         \u001b[0mdet\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfocus_column\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mmatrix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfocus_column\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0msub_det\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-32-cad16e5608a1>\u001b[0m in \u001b[0;36mdeterminant\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    110\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprincipal_minor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    111\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 112\u001b[0;31m         \u001b[0msub_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprincipal_minor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    113\u001b[0m         \u001b[0msub_det\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msub_matrix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeterminant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m         \u001b[0mdet\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfocus_column\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mmatrix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfocus_column\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0msub_det\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-32-cad16e5608a1>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheck_integrity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Matrix is incorrectly configured with empty matrix or row, column, or data type mismatch. Please provide a list of lists containing only ints or floats of consistent dimensions.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mException\u001b[0m: Matrix is incorrectly configured with empty matrix or row, column, or data type mismatch. Please provide a list of lists containing only ints or floats of consistent dimensions."
      ]
     }
@@ -895,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -903,14 +920,14 @@
       "text/plain": [
        "<class: 'Matrix'>\n",
        "Dimensions: 4 row(s) x 4 column(s)\n",
-       " [[1, 0, 0, 0],\n",
-       "  [0, 2, 2, 0],\n",
+       " [[5, 5, 0, 0],\n",
+       "  [5, 5, 2, 0],\n",
        "  [0, 0, 3, 0],\n",
        "  [0, 0, 0, 4]]\n",
        "Size: 16"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +939,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -936,7 +953,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
